test/files/neg/t8104.check
Test_2.scala:20: error: implicit error;
!I e: Generic.Aux[C, (Int,Int)]
  implicitly[Generic.Aux[C, (Int, Int)]]
            ^
1 error
